--- a/aillp-builder/src/ComponentPreview.css
+++ b/aillp-builder/src/ComponentPreview.css
@@ -1,6 +1,6 @@
 .componentPreview {
   text-align: left;
-  margin-bottom: 2em;
+  margin-bottom: 0em;
 }
 
 .componentPreview .titleRow {
@@ -27,7 +27,7 @@
 
 .componentPreview ul {
   list-style-type: disc;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .componentPreview .editableStatus {
